--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple and beautiful slider",
   "main": "index.js",
   "scripts": {
-    "start": "gulp",
+    "dev": "gulp",
+    "open": "concurrently \"http-server -a localhost -p 1234 ./dist\" \"start http://localhost:1234\"",
     "deploy": "gh-pages -d dist"
   },
   "author": "Reyrin",
@@ -13,6 +14,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "browser-sync": "^2.26.14",
+    "concurrently": "^6.2.0",
     "gh-pages": "^3.2.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -23,7 +25,8 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-terser": "^2.0.1"
+    "gulp-terser": "^2.0.1",
+    "http-server": "^0.12.3"
   },
   "browserslist": [
     "last 2 version",
